--- a/portfolio Lucas Speziale/src/index.css
+++ b/portfolio Lucas Speziale/src/index.css
@@ -31,16 +31,16 @@ ul{
 }
 
 li{
-  flex: 1;
+  flex: 0.5;
   display: flex;
   align-items: stretch;
   cursor: pointer;
   transition: all 0.35s ease;
   cursor: pointer;
   position: relative;
-  background-size: cover;
+  background-size:100%;
   background-repeat: no-repeat;
-  background-position: top center;
+  background-position: top center ;
   overflow: hidden;
 }
 li:before{
@@ -87,6 +87,7 @@ h3{
   opacity: 1;
   top: 50%;
   left:50%;
+ 
   transition: top 0.35s, opacity 015s;
   transform-origin: 0 0;
   font-size: 24px;
@@ -105,10 +106,12 @@ h3{
 .active h3{
   opacity: 0;
   top: 200%;
+  color: white;
 }
 
 .section-content{
   position: relative;
+ 
   z-index: 30;
   opacity: 0;
   align-self: flex-end;
@@ -127,11 +130,14 @@ h3{
   grid-template-columns: 1fr;
   grid-column-gap: 20px;
   align-items: flex-end;
+  color: #111111;
+  width: 100%;
   left: 0;
   bottom: 0;
   padding: 20px;
   opacity: 0;
   transition: opacity 0.25s ease-out;
+  background-color: white;
 
 }
 
